--- a/public/landing_page.html
+++ b/public/landing_page.html
@@ -19,8 +19,7 @@
                 <img class="gambar" src="assets/logo.png">
               </div>
               <ul class="nav navbar-nav navbar-right">
-                <li><a class="link" href="#"><span>Log In</span></a></li>
-                <li><button class="tombol" href="#"><span>Sign Up</span></button></li>
+                <li><a href="index.html"><button class="tombol" href="#"><span>Sign Up</span></button></li></a> 
               </ul>
             </div>
           </nav>
